Added bm25 and tfidf scoring

--- a/codes/rag/scraping_table.ipynb
+++ b/codes/rag/scraping_table.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 203,
    "id": "23828579",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f5e7e82a4b764923bf780694e926c4d1",
+       "model_id": "4732da793d9f4206b566bcd1aa0159e4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -31,6 +31,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Number of tables found: 10, in url: https://en.wikipedia.org/wiki/List_of_wars_by_death_toll\n",
+      "Number of tables found: 2, in url: https://en.wikipedia.org/wiki/List_of_wars:_1990%E2%80%932002\n",
+      "Number of tables found: 6, in url: https://en.wikipedia.org/wiki/List_of_wars:_1945%E2%80%931989\n",
+      "Number of tables found: 5, in url: https://en.wikipedia.org/wiki/List_of_wars:_1900%E2%80%931944\n",
+      "Number of tables found: 6, in url: https://en.wikipedia.org/wiki/List_of_wars:_2003%E2%80%93present\n",
+      "Number of tables found: 11, in url: https://en.wikipedia.org/wiki/List_of_wars:_1800%E2%80%931899\n",
+      "Number of tables found: 4, in url: https://en.wikipedia.org/wiki/List_of_wars:_1500%E2%80%931799\n",
+      "Number of tables found: 7, in url: https://en.wikipedia.org/wiki/List_of_wars:_1000%E2%80%931499\n",
+      "Number of tables found: 6, in url: https://en.wikipedia.org/wiki/List_of_wars:_before_1000\n",
       "Total Chunks: 299\n",
       "Chunk: contents list of wars by death toll List of wars by death toll | 0 ||| Part of a series on || War (outline) || showHistory || showMilitary || showBattlespace || showWeapons || showTactics || showOperational || showStrategy || showGrand strategy || showAdministrative || showOrganization || showPersonnel || showLogistics || showScience || showLaw || showTheory || showNon-warfare || showCulture || showRelated || hideLists Battles Military occupations Military terms Operations Sieges War crimes Wars Weapons Writers || vte || this list of wars by death toll includes all deaths that are either directly or indirectly caused by war. these numbers include the deaths of military personnel which are the direct results of a battle or other military wartime actions, as well as wartime / war - related deaths of civilians which are often results of war - induced epidemics, famines, genocide, etc. due to incomplete records, the destruction of evidence, differing methods of counting, and various other reasons, death tolls of wars have often been quite uncertain, and heavily debated. while the definition of war isn't entirely clear - cut, there is a general understanding of what it is. merriam - webster defines war as \" a state of usually open and declared armed hostile conflict between states or nations \", [ 1 ] oxford english dictionary defines war as \" hostile contention by means of armed forces, carried on between nations, states, or rulers, or between parties in the same nation or state ; the employment of armed forces against a foreign power, or against an opposing party in the state \", [ 2 ] and encyclopædia britannica defines war as \" a conflict between political groups involving hostilities of considerable duration and magnitude \". [ 3 ] this list excludes mass killings and atrocities not explicitly classified as genocides, as well as genocides occurring outside of wartime, human sacrifices, ethnic cleansing operations, and acts of state terrorism or political repression during peacetime. [ a ] list\n",
       "Source URL: https://en.wikipedia.org/wiki/List_of_wars_by_death_toll\n",
@@ -146,6 +155,10 @@
     "    last_header = \"\"\n",
     "\n",
     "    elements = soup.find_all(['h1', 'h2', 'h3', 'h4', 'p', 'table'])\n",
+    "    \n",
+    "    table_count = sum(1 for element in elements if element.name == 'table')\n",
+    "    print(f\"Number of tables found: {table_count}, in url: {url}\")\n",
+    "    \n",
     "    for element in elements:\n",
     "        if element.name in ['h1', 'h2', 'h3', 'h4']:\n",
     "            header_text = get_text_content(element)\n",
@@ -210,14 +223,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 192,
    "id": "8f543279",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "091be629c0c243e39fd2f7de4e9e58c9",
+       "model_id": "9ea1bfc54ba04cc4bc90db41619b0a31",
        "version_major": 2,
        "version_minor": 0
       },
@@ -232,7 +245,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Stored 307 relevant chunks\n"
+      "Stored 299 relevant chunks\n"
      ]
     }
    ],
@@ -248,6 +261,7 @@
     "import json\n",
     "from requests.adapters import HTTPAdapter\n",
     "from requests.packages.urllib3.util.retry import Retry\n",
+    "from rank_bm25 import BM25Okapi\n",
     "\n",
     "session = requests.Session()\n",
     "retry = Retry(total=5, backoff_factor=1, status_forcelist=[429, 500, 502, 503, 504])\n",
@@ -263,7 +277,7 @@
     "client = QdrantClient(url=qdrant_url)\n",
     "embedding_model = SentenceTransformer(model_path)\n",
     "\n",
-    "TOP_K = 5\n",
+    "TOP_K = 8\n",
     "TOP_N = 3\n",
     "\n",
     "def get_embeddings(texts):\n",
@@ -301,47 +315,51 @@
     "        limit=k,\n",
     "        with_payload=True\n",
     "    )\n",
-    "    return [{\"text\": hit.payload[\"text\"], \"url\": hit.payload[\"url\"]} for hit in search_result]\n",
+    "    return [{\"text\": hit.payload[\"text\"], \"url\": hit.payload[\"url\"], \"score\": hit.score} for hit in search_result]\n",
     "\n",
-    "def process_streamed_response(response, buffer_size=10):\n",
-    "    response_text, buffer = \"\", \"\"\n",
-    "    for chunk in response.iter_content(chunk_size=None):\n",
-    "        try:\n",
-    "            data = json.loads(chunk.decode('utf-8'))\n",
-    "            content = data.get(\"response\", \"\")\n",
-    "            buffer += content\n",
+    "# Initialize BM25 for keyword relevance\n",
+    "def init_bm25(corpus_texts):\n",
+    "    tokenized_corpus = [text.split() for text in corpus_texts]\n",
+    "    return BM25Okapi(tokenized_corpus)\n",
     "\n",
-    "            if len(buffer) >= buffer_size:\n",
-    "                response_text += buffer\n",
-    "                clear_output(wait=True)\n",
-    "                display(Markdown(response_text))\n",
-    "                buffer = \"\"\n",
-    "                \n",
-    "        except json.JSONDecodeError:\n",
-    "            continue\n",
-    "            \n",
-    "    response_text += buffer\n",
-    "    clear_output(wait=True)\n",
-    "    display(Markdown(response_text))\n",
-    "    return response_text\n",
+    "def calculate_bm25_scores(bm25, query_text):\n",
+    "    tokenized_query = query_text.split()\n",
+    "    return bm25.get_scores(tokenized_query)\n",
     "\n",
-    "def calculate_keyword_overlap_score(chunk, query_keywords):\n",
-    "    chunk_words = Counter(re.findall(r'\\w+', chunk.lower()))\n",
-    "    overlap_count = sum(chunk_words.get(keyword, 0) for keyword in query_keywords)\n",
-    "    return overlap_count\n",
+    "# Initialize TF-IDF for keyword relevance\n",
+    "def init_tfidf(corpus_texts):\n",
+    "    vectorizer = TfidfVectorizer()\n",
+    "    tfidf_matrix = vectorizer.fit_transform(corpus_texts)\n",
+    "    return vectorizer, tfidf_matrix\n",
     "\n",
-    "def get_top_n_chunks_by_combined_score(query_text, retrieved_docs, n=TOP_N, semantic_weight=0.7, keyword_weight=0.3):\n",
-    "    query_keywords = set(re.findall(r'\\w+', query_text.lower()))\n",
+    "def calculate_tfidf_scores(vectorizer, tfidf_matrix, query_text):\n",
+    "    query_vec = vectorizer.transform([query_text])\n",
+    "    return cosine_similarity(query_vec, tfidf_matrix).flatten()\n",
+    "\n",
+    "def get_top_n_chunks_by_combined_score(query_text, retrieved_docs, n=TOP_N, semantic_weight=0.6, keyword_weight=0.4):\n",
+    "    \n",
+    "    bm25 = init_bm25([doc[\"text\"] for doc in retrieved_docs])\n",
+    "    keyword_scores_bm25 = calculate_bm25_scores(bm25, query_text)\n",
+    "        \n",
+    "    vectorizer, tfidf_matrix = init_tfidf([doc[\"text\"] for doc in retrieved_docs])\n",
+    "    keyword_scores_tfidf = calculate_tfidf_scores(vectorizer, tfidf_matrix, query_text)\n",
+    "    \n",
+    "    #print(f\"bm25 scores: {keyword_scores_bm25}\\ntfidf scores: {keyword_scores_tfidf}\")\n",
+    "    \n",
     "    scored_chunks = []\n",
-    "\n",
-    "    for doc in retrieved_docs:\n",
+    "    \n",
+    "    for idx, doc in enumerate(retrieved_docs):\n",
     "        semantic_score = doc[\"score\"]\n",
-    "        keyword_overlap_score = calculate_keyword_overlap_score(doc[\"text\"], query_keywords)\n",
-    "        combined_score = (semantic_weight * semantic_score) + (keyword_weight * keyword_overlap_score)\n",
+    "        keyword_score = keyword_scores_bm25[idx]  #or tfidf\n",
+    "        combined_score = (semantic_weight * semantic_score) + (keyword_weight * keyword_score)\n",
     "        scored_chunks.append({\"text\": doc[\"text\"], \"url\": doc[\"url\"], \"combined_score\": combined_score})\n",
     "\n",
+    "    #print(f\"final scores: {[n['combined_score'] for n in scored_chunks]}\")\n",
+    "    \n",
     "    scored_chunks.sort(key=lambda n: n[\"combined_score\"], reverse=True)\n",
-    "    print(f\"Scores: {[n['combined_score'] for n in scored_chunks]}\")\n",
+    "    \n",
+    "    print(f\"sorted scores: {[item['combined_score'] for item in scored_chunks[:n]]}\")\n",
+    "    \n",
     "    return scored_chunks[:n]\n",
     "\n",
     "def search_points_with_metadata(query_text, k=TOP_K, n=TOP_N, semantic_weight=0.8, keyword_weight=0.2):\n",
@@ -354,9 +372,10 @@
     "    )\n",
     "    \n",
     "    retrieved_docs = [{\"text\": hit.payload[\"text\"], \"url\": hit.payload[\"url\"], \"score\": hit.score} for hit in search_result]\n",
+    "    \n",
     "    return get_top_n_chunks_by_combined_score(query_text, retrieved_docs, n=n, semantic_weight=semantic_weight, keyword_weight=keyword_weight)\n",
     "\n",
-    "def ask(query, k=5, n=3, verbose=False):\n",
+    "def ask(query, k=TOP_K, n=TOP_N, verbose=False):\n",
     "    retrieved_docs = search_points_with_metadata(query, k=k, n=n)\n",
     "    combined_docs = \"\\n\\n\".join([f\"Source: {doc['url']}\\n\\n{doc['text']}\" for doc in retrieved_docs])\n",
     "    inst = (\"Instruction: If you do not find the answer within CONTEXT, please respond \"\n",
@@ -379,19 +398,19 @@
     "    store_in_qdrant_with_metadata(scraped_chunks)\n",
     "    print(f'Stored {len(scraped_chunks)} relevant chunks')\n",
     "except Exception as e:\n",
-    "    print(f\"Error storing in Qdrant: {e}\")\n"
+    "    print(f\"Error storing in Qdrant: {e}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 193,
    "id": "82154565",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "Bangladesh Liberation War: 0.3–3 million[49][50] | 1971 | India and Provisional Government of Bangladesh vs. Pakistan | Indian subcontinent"
+       "Death range: 0.3-3 million"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -402,13 +421,132 @@
     }
    ],
    "source": [
-    "_ = ask(\"Bangladesh Liberation War data?\")"
+    "_ = ask(\"Bangladesh Liberation War table data?\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 194,
    "id": "3eb7e384",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "Federal War occurred in the years 1859–1863."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "_ = ask(\"When was Federal War happened?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
+   "id": "9d7782d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "The Quasi-War took place from 1798 to 1800."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "_ = ask(\"When did Quasi-War happend?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 196,
+   "id": "13817562",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "The Second Congo War happened in the Democratic Republic of the Congo."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "_ = ask(\"Where did Second Congo War happend?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
+   "id": "a653292e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "Mass killings and atrocities not explicitly classified as genocides, as well as genocides occurring outside of wartime, human sacrifices, ethnic cleansing operations, and acts of state terrorism or political repression during peacetime."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "_ = ask(\"What types of killings are excluded in the list?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
+   "id": "73227006",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "Answer not found in context."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "_ = ask(\"Table for Arab-Israeli conflict and Lebanese Civil War.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
+   "id": "121cd6c1",
    "metadata": {},
    "outputs": [
     {
@@ -425,133 +563,7 @@
     }
    ],
    "source": [
-    "_ = ask(\"When was Federal War happened?\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 136,
-   "id": "9d7782d1",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/markdown": [
-       "The Quasi-War occurred from 1798 to 1800."
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "_ = ask(\"When did Quasi-War happend?\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "id": "13817562",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/markdown": [
-       "The Second Congo War took place in the Democratic Republic of the Congo."
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "_ = ask(\"Where did Second Congo War happend?\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 95,
-   "id": "a653292e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/markdown": [
-       "Mass killings, atrocities not explicitly classified as genocides, and genocides occurring outside of wartime, human sacrifices, ethnic cleansing operations, and acts of state terrorism or political repression during peacetime."
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "_ = ask(\"What types of killings are excluded in the list?\", k=5, n=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 137,
-   "id": "73227006",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/markdown": [
-       "Here is the requested data in table format:\n",
-       "\n",
-       "| **Conflict** | **Started** | **Ended** | **Name of Conflict** | **Belligerents (Victorious party if applicable)** | **Belligerents (Defeated party if applicable)** |\n",
-       "| --- | --- | --- | --- | --- | --- |\n",
-       "| Second Intifada | 2000 | 2005 | Part of the Israeli–Palestinian conflict | Israel, Palestinian Authority, Fatah, PFLP, DFLP, Hamas, Islamic Jihad | Palestinian Authority, Fatah (al-Aqsa Martyrs' Brigades) |\n",
-       "\n",
-       "Note: There is only one data point for the Arab-Israeli conflict and Lebanese Civil War in the provided text."
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "_ = ask(\"Show table format all data for Arab-Israeli conflict and Lebanese Civil War.\", n=4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 120,
-   "id": "8cbaaac9",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/markdown": [
-       "According to the CONTEXT, the list excludes \"mass killings and atrocities\" that are not explicitly classified as genocides, such as:\n",
-       "\n",
-       "* Genocides occurring outside of wartime\n",
-       "* Human sacrifices\n",
-       "* Ethnic cleansing operations\n",
-       "* Acts of state terrorism or political repression during peacetime."
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "_ = ask(\"this 'list excludes mass killings and atrocities' of what types?\")"
+    "_ = ask(\"Who was the victorious party for Eighth Xhosa War?\", verbose=True)"
    ]
   }
  ],
