--- a/codes/rag/scraping_load.ipynb
+++ b/codes/rag/scraping_load.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "2342993c",
    "metadata": {},
    "outputs": [
@@ -16,7 +16,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "af08c5e714a24cbbb21c0e6629ef10fa",
+       "model_id": "f6159c98cccb4163b6f63fa056c601cb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -70,14 +70,6 @@
     "# Define maximum token length per chunk\n",
     "max_token_length = 480\n",
     "\n",
-    "def init_driver():\n",
-    "    options = webdriver.ChromeOptions()\n",
-    "    options.add_argument('--headless')\n",
-    "    options.add_argument('--no-sandbox')\n",
-    "    options.add_argument('--disable-dev-shm-usage')\n",
-    "    service = Service()\n",
-    "    return webdriver.Chrome(service=service, options=options)\n",
-    "\n",
     "def get_text_content(element):\n",
     "    return ' '.join(element.stripped_strings)\n",
     "\n",
@@ -100,9 +92,7 @@
     "        if len(tokenizer.encode(temp_chunk + \" \" + chunk)) <= max_token_length:\n",
     "            temp_chunk += \" \" + chunk\n",
     "        else:\n",
-    "            # Ensure no chunk exceeds max_token_length\n",
     "            while len(tokenizer.encode(temp_chunk)) > max_token_length:\n",
-    "                # Split the temp_chunk if it's too long\n",
     "                split_point = max_token_length - 1  # Choose safe split point\n",
     "                merged_chunks.append(tokenizer.decode(tokenizer.encode(temp_chunk)[:split_point]))\n",
     "                temp_chunk = tokenizer.decode(tokenizer.encode(temp_chunk)[split_point:])\n",
@@ -117,7 +107,7 @@
     "\n",
     "def chunk_table(df, max_token_length, header_info):\n",
     "    table_chunks = []\n",
-    "    current_chunk = header_info + ' ||| '  # Distinct marker between header and rows\n",
+    "    current_chunk = header_info + ' ||| '\n",
     "    \n",
     "    for _, row in df.iterrows():\n",
     "        row_text = ' | '.join([str(cell) for cell in row if pd.notna(cell)])\n",
